# CMakeSample

./: CMakeLists.txt
include/libfoo/: foo.hh
src/: CMakeLists.txt
src/libfoo/: CMakeLists.txt  foo.cc
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cc
